range sidebar menu

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -12,3 +12,35 @@
     margin: 1rem 0;
   }
 }
+
+.spread-btn{
+  left: 7%;
+  position: absolute;
+  padding: 0;
+  padding-top: 2px;
+  border: none;
+  background: none;
+  color: white;
+  cursor: pointer;
+}
+
+.spread-btn:hover{
+  color: grey;
+}
+
+.menu-wrapper{
+  display: flex;
+  text-align: left;
+  margin-left: 10%;
+  
+  input[type=checkbox]{
+    display: none;
+  }
+  input[type=checkbox] ~ ul{
+    display: none;
+    list-style: none;
+  }
+  input[type=checkbox]:checked ~ ul{
+    display: block;
+  }
+}
