--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -2,7 +2,7 @@
 Code used for embedding Gumroad on the Hydejack Site. 
 Left here for reference, feel free to delete.
 -->
-
+<meta name="google-site-verification" content="HfoIWeg4hpZ-PnH5h-u3MJCZdMuT8FkJcBv9o71_tYk" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="/assets/js/sidebar-folder.js"></script>
 
