--- a/_includes/my-body.html
+++ b/_includes/my-body.html
@@ -105,3 +105,5 @@ Example code for using Matamo as alternative analytics solution.
 </script>
 {% endif %}
 {% endcomment %}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7719645291081297"
+     crossorigin="anonymous"></script>
