--- a/_includes/my-body.html
+++ b/_includes/my-body.html
@@ -12,6 +12,16 @@
   });
 </script> -->
 
+<div class="ad-second">
+  <!-- 블로그-스카이스크래퍼 -->
+  <ins class="adsbygoogle"
+       style="display:inline-block;max-width:320px;width:100%;height:600px"
+       data-ad-client="ca-pub-4699618075256363"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7719645291081297"
      crossorigin="anonymous"></script>
 
