--- a/_includes/my-body.html
+++ b/_includes/my-body.html
@@ -63,6 +63,18 @@ Code for integrating CloudFlare's email protection with Hydejack's single page a
   });
 </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4699618075256363" crossorigin="anonymous"></script>
+<!-- 수평 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4699618075256363"
+     data-ad-slot="3477566307"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 {% comment %}
 <!--
 Example code for using Matamo as alternative analytics solution.
