--- a/_includes/my-body.html
+++ b/_includes/my-body.html
@@ -70,6 +70,7 @@ Code for integrating CloudFlare's email protection with Hydejack's single page a
      data-ad-client="ca-pub-4699618075256363"
      data-ad-slot="3477566307"
      data-ad-format="auto"
+     style="margin: 0 auto; width:800px; height: auto;"
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
